--- a/templates/home.twig
+++ b/templates/home.twig
@@ -1,16 +1,22 @@
 <!doctype html>
 <html lang="en">
 {% include  'partials/head.twig' %}
+
   <body>
   {% include 'partials/navigation.twig' %}
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-      <div class="col-md-2"></div>
+      <div class="col-md-2">
       {% include 'partials/categories.twig' %}
       </div>
       <div class="col-md-10">
+        <div class="row">
+          <div class="col">
+           <p>Total of {{products.total}} products</p>
+          </div>
+        </div>
       <div class="row">
-      {% for item in products %}
+      {% for item in products.items %}
           <div class="col-md-3">
             <h4 class ="text-capitalize" style="min-height:4rem">{{item.name}}</h4>
             <a href="detail.php?product_id={{item.product_id}}">
